Pull request #844: AG-52045: Fix ui of select
Merge in SCITER/adguard-mini from AG-52045-update-dropdown to master

Squashed commit of the following:

commit d05ae93c2dacb56ed336838f3a3c7cb6742ebd7f
Merge: 3a1eff58 394fa039
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Wed Jun 24 09:51:56 2026 +0300

    Merge branch 'master' into AG-52045-update-dropdown

commit 3a1eff581181608f163330078220f6ed3f92e300
Merge: cba6d5a7 29ac7d3e
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Tue Jun 23 11:55:15 2026 +0300

    Merge branch 'master' into AG-52045-update-dropdown

commit cba6d5a7f9f6eb46ee164d22712fefe667175f6b
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Mon Jun 22 14:51:08 2026 +0300

    AG-52045: Fix ui of select

commit bff5ed780c7931a480a9065755386e40a759ee54
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Thu Jun 18 14:09:31 2026 +0300

    wip

--- a/AdguardMini/sciter-ui/modules/common/components/Select/Select.pcss
+++ b/AdguardMini/sciter-ui/modules/common/components/Select/Select.pcss
@@ -8,11 +8,10 @@
     border-radius: 8px;
     flow: horizontal;
     cursor: pointer;
-    border: 1px solid var(--stroke-inputs-inactive-input-stroke-default);
+    border: 1px solid var(--stroke-inputs-active-input-stroke-default);
     background-color: var(--fills-inputs-input-background-default);
     box-sizing: content-box;
     padding: 12px var(--m-s);
-    height: 30px;
 }
 
 .select_check {
@@ -46,14 +45,16 @@
         border-color: var(--fills-menus-dropdown-menu-background-default) !important;
         outline: none !important;
         border-radius: 8px !important;
+        padding: 0 !important;
         margin-top: 16px !important;
         margin-left: -16px !important;
         margin-right: -16px !important;
         border-radius: 8px;
-        box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 0.10) !important;
+        box-shadow: 8px 8px 12px 0px rgba(0, 0, 0, 0.10) !important;
         
         > option {
-            padding: 16px 16px 8px !important;
+            padding: var(--m-s) !important;
+            height: 24px !important;
             flow: horizontal !important;
             vertical-align: middle !important;
             font-size: 16px !important;
@@ -64,14 +65,20 @@
 
             &:first-of-type {
                 border-top: 0 !important;
+                border-radius: 8px 8px 0 0 !important;
             }
 
             &:hover {
                 background-color: var(--fills-backgrounds-page-background-additional-default) !important;
             }
 
+            &:last-of-type {
+                border-radius: 0 0 8px 8px !important;
+            }
+
             &:current {
-                background-color: transparent !important;
+                background-color: var(--fills-backgrounds-page-background-additional-default) !important;
+                font-weight: var(--fw-semibold) !important;
                 fill: inherit !important;
                 color: inherit !important;
 
@@ -82,7 +89,7 @@
         }
     }
     > caption {
-        outline: 0;
+        outline: 0 !important;
         flow: horizontal !important;
         margin-left: -8px !important;
         > span {
